--- a/src/App.css
+++ b/src/App.css
@@ -2,20 +2,18 @@ body {
   background-color: #282c34;
 }
 
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 10vh;
+  width: 100%;
+  text-align: center;
+}
+
 .App {
   text-align: center;
 }
 
-.App-header {
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
+.App-link a {
   color: #61dafb;
 }
